[gd_scene format=3 uid="uid://df01le8v3ygpi"]

[ext_resource type="Script" uid="uid://dlbkeoi4l0td8" path="res://escenas/hud/complete_level_panel.gd" id="1_fbnel"]
[ext_resource type="FontFile" uid="uid://6pdh738vgnfg" path="res://fonts/Jost-VariableFont_wght.ttf" id="2_qauw3"]

[sub_resource type="FontVariation" id="FontVariation_56pp5"]
base_font = ExtResource("2_qauw3")
variation_opentype = {
2003265652: 300
}

[node name="CompleteLevelPanel" type="Control" unique_id=317239760]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fbnel")

[node name="ColorRect" type="ColorRect" parent="." unique_id=1601920262]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5019608)

[node name="CenterContainer" type="CenterContainer" parent="." unique_id=1426669529]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="CenterContainer" unique_id=846965334]
layout_mode = 2

[node name="Title" type="Label" parent="CenterContainer/VBox" unique_id=391335727]
layout_mode = 2
text = "Â¡NIVEL SUPERADO!"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="CenterContainer/VBox" unique_id=115377384]
layout_mode = 2
text = "Puntos: 000000"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBox" unique_id=1906352688]
layout_mode = 2

[node name="ContinueButton" type="Button" parent="CenterContainer/VBox" unique_id=1356968843]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0, 0.73333335, 0.94509804, 1)
theme_override_colors/font_hover_color = Color(0.72, 0.72, 0.72, 1)
theme_override_fonts/font = SubResource("FontVariation_56pp5")
theme_override_font_sizes/font_size = 16
text = "CONTINUAR"
flat = true

[node name="MenuButton" type="Button" parent="CenterContainer/VBox" unique_id=674761555]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0, 0.73333335, 0.94509804, 1)
theme_override_colors/font_hover_color = Color(0.72, 0.72, 0.72, 1)
theme_override_fonts/font = SubResource("FontVariation_56pp5")
theme_override_font_sizes/font_size = 16
text = "SALIR AL MENU"
flat = true
